[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingagents"
version = "0.2.4"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "python-dotenv",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.81",
    "langgraph>=0.4.8",
    "yfinance>=0.2.63",
    "pandas>=2.3.0",
    "stockstats>=0.6.5",
    "backtrader>=1.9.78.123",
    "requests>=2.32.4",
    "pytz>=2025.2",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
    "questionary>=2.1.0",
    "parsel>=1.10.0",
    "typing-extensions>=4.14.0",
    "setuptools>=80.9.0",
    "anthropic>=0.52.0",
]

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["tradingagents", "cli"]
